--- a/index.html
+++ b/index.html
@@ -4,31 +4,34 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Melanie Köcher - Stadtführungen in Leipzig | mellikoe.de</title>
-  <link rel="stylesheet" href="./assets/fonts.css" media="none" onload="if(media!='all')media='all'">
-  <noscript><link rel="stylesheet" href="./assets/fonts.css"></noscript>
-  <link rel="stylesheet" href="./assets/style.css" media="none" onload="if(media!='all')media='all'">
-  <noscript><link rel="stylesheet" href="./assets/style.css"></noscript>
-  <link rel="author" href="./assets/humans.txt">
+  <link rel="stylesheet" href="assets/fonts.min.css" media="none" onload="if(media!='all')media='all'">
+  <noscript><link rel="stylesheet" href="assets/fonts.min.css"></noscript>
+  <link rel="stylesheet" href="assets/style.min.css" media="none" onload="if(media!='all')media='all'">
+  <noscript><link rel="stylesheet" href="assets/style.min.css"></noscript>
+  <link rel="author" href="assets/humans.txt">
+  <base href="https://mellikoe.de" target="_blank, _self, _parent, _top">
 </head>
 <body>
   <header>
     <!-- nothing so far -->
   </header>
 
-  <article class="brand--logo">
-    <img class="brand--logo" src="./assets/logo.svg" alt="Logo: mellikoe.de" />
+  <article class="brand-logo">
+    <a href="index.html">
+      <img src="assets/logo.svg" alt="Logo: mellikoe.de" />
+    </a>
   </article>
 
-  <article class="brand--contact">
+  <article class="brand-contact">
     <a href="tel:00491753455972"><span class="icon phone">+49 175 3455972</span></a>
     <a href="mailto:leipzig@mellikoe.de"><span class="icon mail">leipzig@mellikoe.de</span></a>
   </article>
 
   <div class="spacer"></div>
 
-  <footer class="legal">
-    <span class="legal--imprint">Impressum || Melanie Köcher | Herrnhuter Str. 7 | 04299 Leipzig ||</span>
-    <span class="legal--privacy"><a href="datenschutz">Datenschutzerklärung</a></span>
+  <footer class="legallinks">
+    <span class="legallinks-imprint">Impressum || Melanie Köcher | Herrnhuter Str. 7 | 04299 Leipzig ||</span>
+    <span class="legallinks-privacy"><a href="datenschutz.html">Datenschutzerklärung</a></span>
   </footer>
 </body>
 </html>
